# RIP

./: .gitignore  README.md  add-certificate.sh  docker-compose.yml  go.mod  go.sum  index.html  manifest.webmanifest  package-lock.json  package.json  registerSW.js  sw.js  vite.config.ts
.github/workflows/: deploy.yml
RIP(Go)/: README.md  docker-compose.yml  go.mod  go.sum
RIP(Go)/cmd/migrate/: main.go
RIP(Go)/cmd/rip-go/: main.go
RIP(Go)/config/: config.toml
RIP(Go)/docs/: docs.go  openapi.yaml  swagger.json  swagger.yaml
RIP(Go)/internal/api/: server.go
RIP(Go)/static/css/: style.css
RIP(Go)/templates/: calculator.html  error.html  index.html  order.html  service.html
assets/: index-Bf945YFC.js  index-CkZVu2rM.js  index-DYW5lnbQ.css  index-DffEBTXv.js  index-DncE-k8w.js  index-Hlk0LbN3.css  index-Upk_gdXD.js  index-fd9gJHhJ.js
certs/: server.crt  server.key
cmd/migrate/: add_user_uuid.go  main.go
cmd/rip-go/: main.go
config/: config.toml
docs/: docs.go  swagger.json  swagger.yaml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/.github/workflows/: deploy.yml
frontend/src/app/: App.tsx
frontend/src/css/: style.css
internal/api/: server.go
internal/app/auth/: jwt.go  redis.go
internal/app/calculator/: delivery_calculator.go
internal/app/config/: config.go
internal/app/ds/: cart.go  logistic_request.go  order.go  (+2 more)
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/app/: App.tsx
static/css/: style.css
templates/: calculator.html  index.html  order.html
(+48 files in other folders)
