[package]
name = "gruzdelivery"
version = "1.0.0"
description = "GruzDelivery - Приложение для заказа грузоперевозок"
authors = ["GruzDelivery Team"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-shell = { version = "2.0.0" }
tauri-plugin-http = { version = "2.0.0" }
tauri-plugin-fs = { version = "2.0.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

